[package]
name = "ddddb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5.2"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "ddddb-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "ddddb-client"
path = "src/client.rs"